# msg_split

./: .gitignore  README.md  main.py  msg_split.py  pyproject.toml  test.html
tests/: test_split.py
