[tool.poetry]
name = "maddevs"
version = "0.1.0"
description = ""
authors = ["Vchslv-Zkhrv <vchslv.zkhrv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"
colorama = "^0.4.6"
pytest = "^8.3.3"
click = "^8.1.7"
bs4 = "^0.0.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
